stopping vertical and horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
 body {
   text-align: center;
   background-color: #283149;
+  
+/*   stoping vertical and horizontal scrolling */
+  
+  margin: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  
 }
 
 h1 {
@@ -48,7 +55,7 @@ footer {
   border-radius: 25px;
   /* display: inline-block; */
   width: 100%;
-  height: 75px;
+  height: 68px;
   text-align: center;
   margin: 10px;
   background-color: white;
